[fix] nav, modal, spinner z-index.

--- a/client/src/assets/styles/utils/mixins/nav.scss
+++ b/client/src/assets/styles/utils/mixins/nav.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 3;
+  z-index: 1;
   padding: 0 1em;
   height: var(--nav-height);
   color: white;
