--- a/client/src/components/common/Spinner/Spinner.scss
+++ b/client/src/components/common/Spinner/Spinner.scss
@@ -14,7 +14,6 @@
     @include centerlized-content;
 
     position: absolute;
-    z-index: 1;
     top: 0;
     left: 0;
     height: 100vh;
