--- a/client/src/components/pages/Posts/helpers/CreatePostModal/CreatePostModal.scss
+++ b/client/src/components/pages/Posts/helpers/CreatePostModal/CreatePostModal.scss
@@ -4,7 +4,6 @@
 
 .create-post-modal {
   position: fixed;
-  z-index: 2;
   top: 0;
   left: 0;
   right: 0;
